--- a/auth/package.json
+++ b/auth/package.json
@@ -14,7 +14,11 @@
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.2",
+    "mongoose": "^7.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/mongoose": "^5.11.97"
   }
 }
