--- a/auth/package.json
+++ b/auth/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev src/index.ts"
+    "start": "ts-node-dev src/index.ts",
+    "test": "jest --watchAll --no-cache"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +23,13 @@
   },
   "devDependencies": {
     "@types/cookie-session": "^2.0.44",
+    "@types/jest": "^29.5.1",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/mongoose": "^5.11.97"
+    "@types/mongoose": "^5.11.97",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.5.0",
+    "mongodb-memory-server": "^7.6.3",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0"
   }
 }
