Add client infra

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -5,17 +5,26 @@ deploy:
     manifests:
       - ./infra/k8s/*
 build:
-  local:
-    push: false
-  # googleCloudBuild:
-  #   projectId: ticketing-dev-385213
+  # local:
+  #   push: false
+  googleCloudBuild:
+    projectId: ticketing-dev-385213
   artifacts:
-    # - image: us.gcr.io/ticketing-dev-385213/auth
-    - image: mcs/auth
+    - image: us.gcr.io/ticketing-dev-385213/auth
+    # - image: mcs/auth
       context: auth
       docker:
         dockerfile: Dockerfile
       sync:
         manual:
           - src: "src/**/*.ts"
+            dest: .
+    - image: us.gcr.io/ticketing-dev-385213/client
+    # - image: mcs/client
+      context: client
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.js"
             dest: .
