--- a/auth/package.json
+++ b/auth/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@anhdo-tickets/common": "^1.0.3",
     "cookie-session": "^2.0.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
